[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/screens/prova.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/screens/TableScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/user interface/themes/DarkTheme/StyleBox/Panel.stylebox" type="StyleBox" id=3]
[ext_resource path="res://assets/user interface/themes/MinimalUI/MinimalUI.tres" type="Theme" id=4]
[ext_resource path="res://assets/user interface/themes/DarkTheme/StyleBox/ButtonPressed.stylebox" type="StyleBox" id=5]
[ext_resource path="res://assets/user interface/themes/secondary_font.tres" type="DynamicFont" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -242.0
margin_top = 30.0
margin_right = 242.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 1 )
text = "LISTA PAZIENTI:"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -884.5
margin_top = -410.0
margin_right = 884.5
margin_bottom = -310.0
custom_styles/bg = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1767.0
margin_bottom = 82.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
margin_right = 880.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="Nome" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
margin_right = 880.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 1 )
text = "NOME    COGNOME"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
margin_left = 884.0
margin_right = 1765.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="Cognome" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainer2"]
margin_right = 881.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
margin_left = 98.0
margin_top = 250.0
margin_right = 1866.0
margin_bottom = 740.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer2"]
margin_right = 1768.0
margin_bottom = 490.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer2/HBoxContainer"]
margin_right = 878.0
margin_bottom = 490.0
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="ScrollContainer2/HBoxContainer"]
margin_left = 882.0
margin_right = 886.0
margin_bottom = 490.0

[node name="VBoxContainer2" type="VBoxContainer" parent="ScrollContainer2/HBoxContainer"]
margin_left = 890.0
margin_right = 1768.0
margin_bottom = 490.0
size_flags_horizontal = 3
custom_constants/separation = 15
alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="."]
margin_left = 17.0
margin_top = 764.0
margin_right = 1896.0
margin_bottom = 854.0
size_flags_horizontal = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer5"]
margin_right = 1879.0
margin_bottom = 90.0
size_flags_horizontal = 3
custom_constants/separation = 50
alignment = 1

[node name="Button31" type="Button" parent="HBoxContainer5/HBoxContainer"]
margin_left = 280.0
margin_right = 686.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
text = "MODALITA 1"

[node name="Button32" type="Button" parent="HBoxContainer5/HBoxContainer"]
margin_left = 736.0
margin_right = 1142.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
text = "MODALITA 2"

[node name="Button33" type="Button" parent="HBoxContainer5/HBoxContainer"]
margin_left = 1192.0
margin_right = 1598.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
text = "MODALITA 3"

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -142.0
margin_top = -180.0
margin_right = 142.0
margin_bottom = -83.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
text = "ESCI"

[node name="NotificationPanel" type="PanelContainer" parent="."]
visible = false
margin_left = 295.0
margin_top = 600.0
margin_right = 1620.0
margin_bottom = 689.0
theme = ExtResource( 4 )
custom_styles/panel = ExtResource( 3 )

[node name="Notification" type="Label" parent="NotificationPanel"]
margin_left = 2.0
margin_top = 23.0
margin_right = 1323.0
margin_bottom = 65.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 6 )
align = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="HBoxContainer5/HBoxContainer/Button31" to="." method="_on_Button31_pressed"]
[connection signal="pressed" from="HBoxContainer5/HBoxContainer/Button32" to="." method="_on_Button32_pressed"]
[connection signal="pressed" from="HBoxContainer5/HBoxContainer/Button33" to="." method="_on_Button33_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
